updated index page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Songze Li</title>
-	<link rel="shortcut icon" href="usc.ico">	
+	<!-- <link rel="shortcut icon" href="usc.ico"> -->	
 <style>
 body {
     background-color: #303030;
@@ -71,23 +71,25 @@ a:active {
 <body>
 
 <table class="main">
-<tr>
+<!-- <tr>
 	<td colspan="2" style="font-family: Sans-serif; font-size: 200%;">
 		<strong>&nbsp;Songze Li</strong>
 	</td>
-</tr>
+</tr> -->
+
 <tr class="menu">
 	<td colspan="2">
 		<div style="padding-top: 0.1em; padding-bottom: 0.15em;">&nbsp;
 		| <a href="index.html" class="menu">Home</a> 
 		| <a href="publications.html" class="menu">Publications</a>  
-		| <a href="CV.pdf" class="menu" target="_blank">CV</a> 
+		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a> 
 		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
 		|
 		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->  		
 </div>
 	</td>
 </tr>
+
 <tr>
 	<td>
 		<table width="100%" style="padding-right: 5px;">
@@ -96,49 +98,57 @@ a:active {
 				<table bgcolor="#FFFAFA" width="100%" style="padding: 5px">
 					<tr>
 					<td>
-						<div style="text-align: left;">
-							<img src="songze.jpg" width="150" height="180" alt="" />
+						<div style="text-align: left; padding-left: 40px">
+							<img src="songze.jpg" width="140" height="180" alt="" />
 						</div>
 						<br>
-						<div style="font-size: 90%; text-align: left; padding-left: 10px; padding-bottom: 10px;">
-							<span style="font-size: 150%;">Contact Information:</span><br>&nbsp;<br>
+
+						<div style="font-size: 100%; text-align: left; padding-left: 10px; padding-bottom: 10px;">
+							<!-- <span style="font-size: 150%;">Contact Information:</span><br>&nbsp;<br> -->
 						<!--	Electrical Engineering Dept.<br> 
 							University of Southern California<br>
-
 <br>
-
 							3740 McClintock Ave,    EEB 532<br>
 							Los Angeles, CA 90089-2565<br>&nbsp;<br>
 <br>                    -->
 <!--                       <a href="http://trifectachain.com" target="_blank"><span style="font-size: 120%;">Trifecta Blockchain Inc.</span></a><br>
                         <br> 
                         -->
-							Email: songzeli8824 [at] gmail [dot] com
+							songzeli8824 [at] gmail [dot] com<br><br>
+
+							<a href="https://scholar.google.com/citations?user=zX8LAXkAAAAJ&hl=en&authuser=1">Google Scholar</a><br>
+							<a href="https://github.com/songzLi">Github</a>
 						</div>
 					</td>
 					</tr>
 				</table>
 			</td>
-			<td width="560" valign="top" style="padding-left: 15px;">
-				<div style="vertical-align: text-top; font-size: 100%">	
+
+			<td width="600" valign="top" style="font-size: 100%; text-align: left; padding-top: 10px;">
+				<strong style="font-size: 150%";> Songze Li</strong><br><br>
+
+				Researcher <br><br>
+				Department of Electrical Engineering <br>
+				Stanford University
+			</td>
+		</tr>	
+	    </table>
+	</td>
+</tr>
+
+<hr>
+
+<tr>
+	<td width="1000" valign="top" style="padding-left: 15px;">
+				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
 				<h2> About Me </h2>	
-				<p>I am currently working as a blockchain researcher with <a href="https://tselab.stanford.edu/" target="_blank">Prof. David Tse</a> at <a href="https://www.stanford.edu/" target="_blank">Stanford University</a>. My research has been focusing on designing and implementing the next-generation scalable blockchain systems. I am leading a multi-institute effort on developing a testnet for the <a href="https://arxiv.org/abs/1810.08092" target="_blank">Prism</a> blockchain technology.
+				<p>I am currently working as a blockchain researcher at Stanford university. Prior to that, I spent a year as a research scientist working on blockchain technologies at Applied Protocol Research. I received my PhD degree in Electrical Engineering from University of Southern California, and my BSc degree in Electrical Engineering from New York University.
 				</p>
 
-				<ul>    
+			<!-- 	<ul>    
 				<li><a href="https://www.linkedin.com/in/songze-li-0a418614?trk=nav_responsive_tab_profile” class="btn btn-default btn-lg">My LinkedIn Profile</a> </li>
-				</ul>
-
-                <h3> Education </h3>	
-				<p>I received my PhD degree from the <a href="http://ee.usc.edu/" target="_blank">Electrical Engineering Department</a> at <a href="http://www.usc.edu/" target="_blank">University of Southern California</a>. During my PhD, I was working with <a href="http://www-bcf.usc.edu/~avestime/Home.html">Prof. Salman Avestimehr</a>, on designing efficient, scalable, and secure distributed computing systems for large-scale machine learning and data analytics.</p>
-
-				<ul>
-                <li><a href="https://scholar.google.com/citations?user=zX8LAXkAAAAJ&hl=en&authuser=1">My Google Scholar Page</a></li>     
-				</ul>
-
-
-		        <p> I received my B.Sc. degree in Electrical Engineering from <a href="http://engineering.nyu.edu/">NYU</a> in 2011, and my M.Sc. degree in Electrical and Computer Engineering from <a href="http://ee.usc.edu">USC</a> in 2016.</p>
-				
+				</ul> -->
+			
 				<h4>Distinctions & Awards</h4>
 				<ul>
 				<li><a href="http://ita.ucsd.edu/workshop/18/talks.php#talk2” class="btn btn-default btn-lg">ITA Graduation Day Talk 2018</a> </li>
@@ -147,29 +157,20 @@ a:active {
 				<li><a href="http://ita.ucsd.edu/workshop/17/talks.php#talk2” class="btn btn-default btn-lg">ITA Graduation Day Poster 2017</a> </li>
 				</ul>
 
-				<h2> Research Interests </h2>
+				<h2> Research Interests </h2> 
 				<ul>
-  				<li><b>Distributed computing systems for big data analytics</b>
-    <ul>
-      <li> Gradient compression in distributed deep learning</li>
-      <li>In-network codes to reduce data shuffling load in distributed computing</li>
-      <li>Erasure codes to alleviate the effect of straggling servers</li>
-    </ul>
-  </li><br>
+				<li>Secure, efficient, and scalable blockchain systems</li>	
+  				<li>ML systems</li>
+  				<li>Codded distributed computing</li>
+    			<li>Edge/fog computing</li>
+				</ul>	
 
-    <li><b>Blockchain systems</b>
-    <ul>
-      <li>Secure and scalable blockchain designs</li>
-      <li>Efficient data availability proof for light clients</li>
-    </ul>
-    </li><br>
-					
-    <li><b>Edge/fog computing</li></b><br>
-				</ul>			
-				</div>
-			</td>
-		</tr>
-		</table>
+				<h2> News </h2> 	
+				<ul>
+				<li>Together with amazing collaborators from academia and industry, we release a software library <a href="https://www.fedml.ai/"><strong> FedML</strong></a> for federated learning, which allows fast prototying and experimenting research ideas across various computing environments. Please give it a try and your feedbacks are greatly appreciated.</li>	
+  				<li>Our paper "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously" is published on IEEE Transactions on Information Forensics and Security. Congratulations Fisher, Chien-Sheng, Salman, Sreeram, and Pramod!</li>
+  				<li>Together with my PhD advisor Salman Avestimehr, we publish a monograph on coded computing!</li>
+				</ul>	
 	</td>
 </tr>	
 </table>
