--- a/publications.html
+++ b/publications.html
@@ -76,11 +76,11 @@ a:active {
 <body>
 
 <table class="main">
-<tr>
+<!-- <tr>
 	<td colspan="2" style="font-family: Sans-serif; font-size: 200%;">
 		<strong>&nbsp;Songze Li </strong>
 	</td>
-</tr>
+</tr> -->
 <tr class="menu">
 	<td colspan="2">
 		<div style="padding-top: 0.1em; padding-bottom: 0.15em;">&nbsp;
@@ -97,9 +97,14 @@ a:active {
 <tr class="publication">
 	<td>
 		<div style="padding: 10px">
-			<h2>Journal Papers and Preprints:</h2>
+			<h2>Monopraphs</h2>
 			<ol type="1">
-				<li><strong>S. Li</strong>, M. Yu, A. S. Avestimehr, S. Kanna, and P. Viswanath, "<a href="https://arxiv.org/abs/1809.10361" target="_blank">PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously</a>," <em>e-print arXiv:1809.10361</em>.</li>
+				<li><strong>S. Li</strong> and A. S. Avestimehr, "<a href="https://www.nowpublishers.com/article/Details/CIT-103" target="_blank">Coded Computing</a>," <em>Foundations and Trends in Communications and Information Theory: Vol. 17: No. 1, pp 1-148, Aug 2020</em>.</li>
+			</ol>
+
+			<h2>Journal Papers and Preprints</h2>
+			<ol type="1">
+				<li><strong>S. Li</strong>, M. Yu, C. Yang, A. S. Avestimehr, S. Kanna, and P. Viswanath, "<a href="https://arxiv.org/abs/1809.10361" target="_blank">PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously</a>," <em>IEEE Transactions on Information Forensics and Security, vol. 16, pp. 249-261, July, 2020</em>.</li>
 				<li><strong>S. Li</strong>, M. Mousavi Kalan, Q. Yu, M. Soltanolkotabi, and A. S. Avestimehr, "<a href="https://arxiv.org/abs/1805.09934" target="_blank">Polynomially Coded Regression: Optimal Straggler Mitigation via Data Encoding</a>," <em>e-print arXiv:1805.09934</em>.</li>
 				<li><strong>S. Li</strong>, M. Maddah-Ali, and A. S. Avestimehr, "<a href="https://arxiv.org/abs/1702.06082" target="_blank">Coding for Distributed Fog Computing</a>," <em>IEEE Communications Magazine, vol. 55, no. 4, pp. 34-40, Apr. 2017</em>.</li>
 				<li><strong>S. Li</strong>, Q. Yu, M. Maddah-Ali, and A. S. Avestimehr, "<a href="https://arxiv.org/abs/1608.05743" target="_blank">A Scalable Framework for Wireless Distributed Computing</a>," <em>IEEE/ACM Transactions on Networking, vol. 25, no. 5, pp. 2643-2654, Oct. 2017</em>.</li>
@@ -107,13 +112,14 @@ a:active {
 				<li><strong>S. Li</strong>, D. Kao, and A. S. Avestimehr, "<a href="http://ieeexplore.ieee.org/document/7282531/" target="_blank">Rover-to-Orbiter Communication in Mars: Taking Advantage of the Varying Topology</a>," <em>IEEE Transactions on Communications, Vol. 64, No. 2, Feb. 2016</em>.</li>
 			</ol>
 
-			<h2>News Articles:</h2>
+			<h2>News Articles</h2>
 			<ol type="1">
 				<li><strong>S. Li</strong>, and A. S. Avestimehr, "<a href="https://www.comsoc.org/ctn/coding-distributed-computation-edge-enabling-robust-and-resilient-edge-computing-service" target="_blank">Coding for Distributed Computation on the Edge: Enabling Robust and Resilient Edge Computing in a Service Oriented Network</a>," <em>IEEE ComSoc Technology News, Aug. 2018</em>.</li>
 			</ol>
 			
-			<h2>Conference Papers:</h2>
+			<h2>Conference Papers</h2>
 			<ol type="1">
+				<li><strong>S. Li</strong>, M. Yu, C. Yang, A.~S.~Avestimehr, S. Kanna, and P. Viswanath, "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously," <em>IEEE ISIT, June 2020</em>.</li>
 				<li>M. Yu, S. Sahraei, <strong>S. Li</strong>, A. S. Avestimehr, S. Kanna, and P. Viswanath, "Coded Merkle Tree: Solving Data Availability Attacks in Blockchains," <em>Financial Cryptography and Data Security, Feb. 2020</em>.</li>
 				<li><strong>S. Li</strong>, S. Sahraei, M. Yu, A. S. Avestimehr, S. Kanna, and P. Viswanath, "Coded State Machine - Scaling State Machine Execution under Byzantine Faults," <em>PODC, July 2019</em>.</li>
 				<li>Q. Yu, <strong>S. Li</strong>, N. Raviv, M. Mousavi Kalan, M. Soltanolkotabi, and A. S. Avestimehr, "Lagrange Coded Computing: Optimal Design for Resiliency, Security, and Privacy," <em>International Conference on Artificial Intelligence and Statistics (AISTATS 2019), Apr. 2019</em>.</li>
