--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ a:active {
 				<ul>
 				<li>Together with amazing collaborators from academia and industry, we release a software library <a href="https://www.fedml.ai/"><strong> FedML</strong></a> for federated learning, which allows fast prototying and experimenting research ideas across various computing environments. Please give it a try and your feedbacks are greatly appreciated.</li>	
   				<li>Our paper "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously" is published on IEEE Transactions on Information Forensics and Security. Congratulations Fisher, Chien-Sheng, Salman, Sreeram, and Pramod!</li>
-  				<li>Together with my PhD advisor Salman Avestimehr, we publish a monograph on coded computing!</li>
+  				<li>Together with my PhD advisor Salman Avestimehr, we publish a <a href="https://www.nowpublishers.com/article/Details/CIT-103" target="_blank">monograph on coded computing</a>.</li>
 				</ul>	
 	</td>
 </tr>	
