--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
 body {
     background-color: #303030;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Verdana', sans-serif;
 }
 
 table.main {
@@ -125,7 +125,7 @@ a:active {
 			</td>
 
 			<td width="600" valign="top" style="font-size: 100%; text-align: left; padding-top: 10px;">
-				<strong style="font-size: 150%";> Songze Li</strong><br><br>
+				<strong style="font-size: 160%";> Songze Li</strong><br><br>
 
 				Researcher <br><br>
 				Department of Electrical Engineering <br>
