--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,7 @@
 <style>
 body {
     background-color: #303030;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Verdana', sans-serif;
 }
 
 table.main {
@@ -119,7 +119,7 @@ a:active {
 			
 			<h2>Conference Papers</h2>
 			<ol type="1">
-				<li><strong>S. Li</strong>, M. Yu, C. Yang, A.~S.~Avestimehr, S. Kanna, and P. Viswanath, "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously," <em>IEEE ISIT, June 2020</em>.</li>
+				<li><strong>S. Li</strong>, M. Yu, C. Yang, A. S. Avestimehr, S. Kanna, and P. Viswanath, "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously," <em>IEEE ISIT, June 2020</em>.</li>
 				<li>M. Yu, S. Sahraei, <strong>S. Li</strong>, A. S. Avestimehr, S. Kanna, and P. Viswanath, "Coded Merkle Tree: Solving Data Availability Attacks in Blockchains," <em>Financial Cryptography and Data Security, Feb. 2020</em>.</li>
 				<li><strong>S. Li</strong>, S. Sahraei, M. Yu, A. S. Avestimehr, S. Kanna, and P. Viswanath, "Coded State Machine - Scaling State Machine Execution under Byzantine Faults," <em>PODC, July 2019</em>.</li>
 				<li>Q. Yu, <strong>S. Li</strong>, N. Raviv, M. Mousavi Kalan, M. Soltanolkotabi, and A. S. Avestimehr, "Lagrange Coded Computing: Optimal Design for Resiliency, Security, and Privacy," <em>International Conference on Artificial Intelligence and Statistics (AISTATS 2019), Apr. 2019</em>.</li>
