--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ a:active {
 				<ul>
 				<li>Secure, efficient, and scalable blockchain systems</li>	
   				<li>ML systems</li>
-  				<li>Codded distributed computing</li>
+  				<li>Coded distributed computing</li>
     			<li>Edge/fog computing</li>
 				</ul>	
 
