--- a/index.html
+++ b/index.html
@@ -140,6 +140,17 @@ a:active {
 
 <tr>
 	<td width="1000" valign="top" style="padding-left: 15px;">
+		<strong>
+			<p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Nov. 2020. </p>
+
+		   <p style="font-size:18px; color:red">I currently have multiple openings for postgraduate students (MPhil and PhD), postdocs, and visiting students/interns, on topics including algorithms and systems of distributed machine learning, and blockchain protocls and systems. If you are interested, please email me with your CV, transcript, and any related pblications at songzeli [at] ust [dot] hk.</p>
+		</strong>
+	</td>
+</tr>
+
+
+<tr>
+	<td width="1000" valign="top" style="padding-left: 15px;">
 				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
 				<h2> About Me </h2>	
 				<p>I am currently working as a blockchain researcher at Stanford university. Prior to that, I spent a year as a research scientist working on blockchain technologies at Applied Protocol Research. I received my PhD degree in Electrical Engineering from University of Southern California, and my BSc degree in Electrical Engineering from New York University.
