--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ a:active {
 		| <a href="publications.html" class="menu">Publications</a>  
 		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a> 
 		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
+		| <a href="bio.html" class="menu">Bio</a> 
 		|
 		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->  		
 </div>
