--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ body {
 }
 
 table.main {
-	margin-left:auto; 
+   margin-left:auto; 
    margin-right:auto;
-   	width:1000px;
+   	width:1400px;
   	border: 1px solid #000000;
   	background-color: #FFFAFA;
 }
@@ -47,22 +47,22 @@ a.menu:active {
 
 /* unvisited link */
 a:link {
-    color: #CC0000;
+    color: blue;
     text-decoration: none;
 }
 
 a:visited {
-    color: #CC0000;
+    color: blue;
     text-decoration: none;
 }
 
 a:hover {
-   color: #CC0000;
+   color: blue;
 	text-decoration: underline;
 }
 
 a:active {
-  	color: #CC0000;
+  	color: blue;
 	text-decoration: underline;
 }
 </style>
@@ -95,12 +95,12 @@ a:active {
 	<td>
 		<table width="100%" style="padding-right: 5px;">
 		<tr>
-			<td width="240" valign="top" width="100%">
+			<td width="400" valign="top" width="100%">
 				<table bgcolor="#FFFAFA" width="100%" style="padding: 5px">
 					<tr>
 					<td>
-						<div style="text-align: left; padding-left: 40px">
-							<img src="songze.jpg" width="140" height="180" alt="" />
+						<div style="text-align: left; padding-left: 60px">
+							<img src="songze.jpg" width="250" height="320" alt="" />
 						</div>
 						<br>
 
@@ -117,6 +117,8 @@ a:active {
                         -->
 							songzeli8824 [at] gmail [dot] com<br><br>
 
+							songzeli [at] ust [dot] hk<br><br>
+
 							<a href="https://scholar.google.com/citations?user=zX8LAXkAAAAJ&hl=en&authuser=1">Google Scholar</a><br>
 							<a href="https://github.com/songzLi">Github</a>
 						</div>
@@ -125,8 +127,8 @@ a:active {
 				</table>
 			</td>
 
-			<td width="600" valign="top" style="font-size: 100%; text-align: left; padding-top: 10px;">
-				<strong style="font-size: 160%";> Songze Li</strong><br><br>
+			<td width="600" valign="top" style="font-size: 100%; text-align: left; padding-top: 30px;">
+				<strong style="font-size: 160%";> Songze Li</strong><br><br><br><br>
 
 				Researcher <br><br>
 				Department of Electrical Engineering <br>
@@ -142,7 +144,7 @@ a:active {
 <tr>
 	<td width="1000" valign="top" style="padding-left: 15px;">
 		<strong>
-			<p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Nov. 2020. </p>
+			<p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p>
 
 		   <p style="font-size:18px; color:red">I currently have multiple openings for postgraduate students (MPhil and PhD), postdocs, and visiting students/interns, on topics including algorithms and systems of distributed machine learning, and blockchain protocls and systems. If you are interested, please email me with your CV, transcript, and any related pblications at songzeli [at] ust [dot] hk.</p>
 		</strong>
@@ -153,6 +155,17 @@ a:active {
 <tr>
 	<td width="1000" valign="top" style="padding-left: 15px;">
 				<!-- <div style="vertical-align: text-top; font-size: 100%">	 -->
+				<h2> News </h2> 	
+				<ul>
+				<li>Excited to introduce <strong>TaiJi</strong>, the <em>first</em> State Machine Replication (or blockchain) consensus protocol that simultaneously achieves <strong>Bitcoin</strong> <em>dynamic availability</em> and <em>unpredictability</em>, and <em>fast confirmation latency</em> of <strong>BFT</strong> protocols, with provable security against <em>fully-adaptive</em> adversary with up to 50% hashing power.<br>
+				<a href="https://arxiv.org/abs/2011.11097">[arXiv]</a>    <a href="https://eprint.iacr.org/2020/1470.pdf">[IACR e-print]</a>    
+				</li><br>	
+				<li>A shorter version of <a href="https://www.fedml.ai/"><strong> FedML</strong></a> whitepaper is accepted to <a href="http://icfl.cc/SpicyFL/2020">NeurIPS 2020 SpicyFL Workshop</a>!</li><br>
+				<li>Together with amazing collaborators from academia and industry, we release a software library <a href="https://www.fedml.ai/"><strong> FedML</strong></a> for federated learning, which allows fast prototying and experimenting research ideas across various computing environments. Please give it a try and your feedbacks are greatly appreciated.</li><br>	
+  				<li>Our paper "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously" is published on IEEE Transactions on Information Forensics and Security. Congratulations Fisher, Chien-Sheng, Salman, Sreeram, and Pramod!</li><br>
+  				<li>Together with my PhD advisor Salman Avestimehr, we publish a <a href="https://www.nowpublishers.com/article/Details/CIT-103" target="_blank">monograph on coded computing</a>.</li><br>
+				</ul>	
+
 				<h2> About Me </h2>	
 				<p>I am currently working as a blockchain researcher at Stanford university. Prior to that, I spent a year as a research scientist working on blockchain technologies at Applied Protocol Research. I received my PhD degree in Electrical Engineering from University of Southern California, and my BSc degree in Electrical Engineering from New York University.
 				</p>
@@ -161,13 +174,13 @@ a:active {
 				<li><a href="https://www.linkedin.com/in/songze-li-0a418614?trk=nav_responsive_tab_profile” class="btn btn-default btn-lg">My LinkedIn Profile</a> </li>
 				</ul> -->
 			
-				<h4>Distinctions & Awards</h4>
+				<!-- <h4>Distinctions & Awards</h4>
 				<ul>
 				<li><a href="http://ita.ucsd.edu/workshop/18/talks.php#talk2” class="btn btn-default btn-lg">ITA Graduation Day Talk 2018</a> </li>
                 		<li><a href="https://www.qualcomm.com/invention/research/university-relations/innovation-fellowship/finalists">Qualcomm Innovation Fellowship Finalists 2017</a></li> 
 				    
 				<li><a href="http://ita.ucsd.edu/workshop/17/talks.php#talk2” class="btn btn-default btn-lg">ITA Graduation Day Poster 2017</a> </li>
-				</ul>
+				</ul> -->
 
 				<h2> Research Interests </h2> 
 				<ul>
@@ -175,13 +188,6 @@ a:active {
   				<li>ML systems</li>
   				<li>Coded distributed computing</li>
     			<li>Edge/fog computing</li>
-				</ul>	
-
-				<h2> News </h2> 	
-				<ul>
-				<li>Together with amazing collaborators from academia and industry, we release a software library <a href="https://www.fedml.ai/"><strong> FedML</strong></a> for federated learning, which allows fast prototying and experimenting research ideas across various computing environments. Please give it a try and your feedbacks are greatly appreciated.</li>	
-  				<li>Our paper "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously" is published on IEEE Transactions on Information Forensics and Security. Congratulations Fisher, Chien-Sheng, Salman, Sreeram, and Pramod!</li>
-  				<li>Together with my PhD advisor Salman Avestimehr, we publish a <a href="https://www.nowpublishers.com/article/Details/CIT-103" target="_blank">monograph on coded computing</a>.</li>
 				</ul>	
 	</td>
 </tr>	
