--- a/publications.html
+++ b/publications.html
@@ -88,6 +88,7 @@ a:active {
 		| <a href="publications.html" class="menu">Publications</a>  
 		| <a href="CV.pdf" class="menu" target="_blank">CV</a> 
 		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
+		| <a href="bio.html" class="menu">Bio</a> 
 		|
 		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->  		
 </div>
@@ -104,7 +105,8 @@ a:active {
 
 			<h2>Journal Papers and Preprints</h2>
 			<ol type="1">
-				<li><strong>S. Li</strong>, M. Yu, C. Yang, A. S. Avestimehr, S. Kanna, and P. Viswanath, "<a href="https://arxiv.org/abs/1809.10361" target="_blank">PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously</a>," <em>IEEE Transactions on Information Forensics and Security, vol. 16, pp. 249-261, July, 2020</em>.</li>
+				<li><strong>S. Li</strong>, D. Tse, "<a href="https://arxiv.org/abs/2011.11097" target="_blank">TaiJi: Longest Chain Availability with BFT Fast Confirmation</a>," <em>e-print arXiv:2011.11097, Nov. 2020</em>.</li>
+				<li><strong>S. Li</strong>, M. Yu, C. Yang, A. S. Avestimehr, S. Kanna, and P. Viswanath, "<a href="https://arxiv.org/abs/1809.10361" target="_blank">PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously</a>," <em>IEEE Transactions on Information Forensics and Security, vol. 16, pp. 249-261, July 2020</em>.</li>
 				<li><strong>S. Li</strong>, M. Mousavi Kalan, Q. Yu, M. Soltanolkotabi, and A. S. Avestimehr, "<a href="https://arxiv.org/abs/1805.09934" target="_blank">Polynomially Coded Regression: Optimal Straggler Mitigation via Data Encoding</a>," <em>e-print arXiv:1805.09934</em>.</li>
 				<li><strong>S. Li</strong>, M. Maddah-Ali, and A. S. Avestimehr, "<a href="https://arxiv.org/abs/1702.06082" target="_blank">Coding for Distributed Fog Computing</a>," <em>IEEE Communications Magazine, vol. 55, no. 4, pp. 34-40, Apr. 2017</em>.</li>
 				<li><strong>S. Li</strong>, Q. Yu, M. Maddah-Ali, and A. S. Avestimehr, "<a href="https://arxiv.org/abs/1608.05743" target="_blank">A Scalable Framework for Wireless Distributed Computing</a>," <em>IEEE/ACM Transactions on Networking, vol. 25, no. 5, pp. 2643-2654, Oct. 2017</em>.</li>
@@ -119,6 +121,7 @@ a:active {
 			
 			<h2>Conference Papers</h2>
 			<ol type="1">
+				<li>C. He, <strong>S. Li</strong>, J. So, M. Zhang, X. Zeng, H. Wang, X. Wang, P. Vepakomma, A. Singh, H. Qiu, L. Shen, P. Zhao, Y. Kang, Y. Liu, R. Raskar, Q. Yang, M. Annavaram and A. S. Avestimehr, "FedML: A Research Library and Benchmark for Federated Machine Learning," <em>NeurIPS SpicyFL workshop, Dec. 2020</em>.</li>
 				<li><strong>S. Li</strong>, M. Yu, C. Yang, A. S. Avestimehr, S. Kanna, and P. Viswanath, "PolyShard: Coded Sharding Achieves Linearly Scaling Efficiency and Security Simultaneously," <em>IEEE ISIT, June 2020</em>.</li>
 				<li>M. Yu, S. Sahraei, <strong>S. Li</strong>, A. S. Avestimehr, S. Kanna, and P. Viswanath, "Coded Merkle Tree: Solving Data Availability Attacks in Blockchains," <em>Financial Cryptography and Data Security, Feb. 2020</em>.</li>
 				<li><strong>S. Li</strong>, S. Sahraei, M. Yu, A. S. Avestimehr, S. Kanna, and P. Viswanath, "Coded State Machine - Scaling State Machine Execution under Byzantine Faults," <em>PODC, July 2019</em>.</li>
