add media coverage

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@ a:active {
 				<h2> News </h2> 	
 				<ul>
 				<li>[Nov. 24, 2020] Excited to introduce <strong>TaiJi</strong>, the <em>first</em> State Machine Replication (or blockchain) consensus protocol that simultaneously achieves <strong>Bitcoin</strong> <em>dynamic availability</em> and <em>unpredictability</em>, and <em>fast confirmation latency</em> of <strong>BFT</strong> protocols, with provable security against <em>fully-adaptive</em> adversary with up to 50% hashing power.<br>
-				<a href="https://arxiv.org/abs/2011.11097">[arXiv]</a>    <a href="https://eprint.iacr.org/2020/1470.pdf">[IACR e-print]</a>    
+				<a href="https://arxiv.org/abs/2011.11097">[arXiv]</a>    <a href="https://eprint.iacr.org/2020/1470.pdf">[IACR e-print]</a>  
+				<a href="https://zkcapital.substack.com/p/this-week-in-blockchain-research-16d">[zk Capital This Week in Blockchain Research Issue #84]</a>  
 				</li><br>	
 				<li>[Nov. 24, 2020] A shorter version of <a href="https://www.fedml.ai/"><strong> FedML</strong></a> whitepaper is accepted to <a href="http://icfl.cc/SpicyFL/2020">NeurIPS 2020 SpicyFL Workshop</a>!</li><br>
 				<li>[Aug. 2020] Together with amazing collaborators from academia and industry, we release a software library <a href="https://www.fedml.ai/"><strong> FedML</strong></a> for federated learning, which allows fast prototying and experimenting research ideas across various computing environments. Please give it a try and your feedbacks are greatly appreciated.</li><br>	
