--- a/index.html
+++ b/index.html
@@ -127,12 +127,14 @@ a:active {
 				</table>
 			</td>
 
-			<td width="600" valign="top" style="font-size: 100%; text-align: left; padding-top: 30px;">
+			<td width="600" valign="top" style="font-size: 100%; text-align: left; padding-top: 50px;">
 				<strong style="font-size: 160%";> Songze Li</strong><br><br><br><br>
 
-				Researcher <br><br>
-				Department of Electrical Engineering <br>
-				Stanford University
+				Assistant Professor <br><br>
+
+				<a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/internet-of-things">Thrust of Internet of Things</a> <br>
+				<a href="https://www.ece.ust.hk/">Department of Electronic and Computer Engineering</a> <br>
+				<a href="https://hkust.edu.hk/">The Hong Kong University of Science and Technology</a>
 			</td>
 		</tr>	
 	    </table>
@@ -144,9 +146,9 @@ a:active {
 <tr>
 	<td width="1000" valign="top" style="padding-left: 15px;">
 		<strong>
-			<p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p>
+			<!-- <p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p> -->
 
-		   <p style="font-size:18px; color:red">I currently have multiple openings for postgraduate students (MPhil and PhD), postdocs, and visiting students/interns, on topics including algorithms and systems of distributed machine learning, and blockchain protocls and systems. If you are interested, please email me with your CV, transcript, and any related pblications at songzeli [at] ust [dot] hk.</p>
+		   <p style="font-size:18px; color:red">My research group currently has multiple openings for postgraduate students (MPhil and PhD), postdocs, and visiting students/interns, on topics including algorithms and systems of distributed machine learning, and blockchain protocls and systems. If you are interested, please email me with your CV, transcript, and any related publications at songzeli [at] ust [dot] hk.</p>
 		</strong>
 	</td>
 </tr>
@@ -168,7 +170,7 @@ a:active {
 				</ul>	
 
 				<h2> About Me </h2>	
-				<p>I am currently working as a blockchain researcher at Stanford university. Prior to that, I spent a year as a research scientist working on blockchain technologies at Applied Protocol Research. I received my PhD degree in Electrical Engineering from University of Southern California, and my BSc degree in Electrical Engineering from New York University.
+				<p>I am an assistant professor with the Thrust of Internet of Things at the Hong Kong University of Science and Technology(Guangzhou), and I am also a visiting assistant professor with the Department of Electronic and Computer Engineering at HKUST(CWB). Before that, I spent two years working as a blockchain researcher at Applied Protocol Research and Stanford University. I received my PhD degree in Electrical Engineering from University of Southern California, and my BSc degree in Electrical Engineering from New York University.
 				</p>
 
 			<!-- 	<ul>    
