updated ECE website

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ a:active {
 				Assistant Professor <br><br>
 
 				<a href="https://hkust-gz.edu.cn/academics/four-hubs/information-hub/internet-of-things">Thrust of Internet of Things</a> <br>
-				<a href="https://www.ece.ust.hk/">Department of Electronic and Computer Engineering</a> <br><br>
+				<a href="https://ece.hkust.edu.hk/">Department of Electronic and Computer Engineering</a> <br><br>
 				
 				<a href="https://hkust.edu.hk/">The Hong Kong University of Science and Technology</a>
 			</td>
