added teaching tab

--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@ body {
 table.main {
 	margin-left:auto; 
    margin-right:auto;
-   width:800px;
+   width:1400px;
   	border: 1px solid #000000;
   	background-color: #FFFAFA;
 }
@@ -85,9 +85,10 @@ a:active {
 	<td colspan="2">
 		<div style="padding-top: 0.1em; padding-bottom: 0.15em;">&nbsp;
 		| <a href="index.html" class="menu">Home</a> 
-		| <a href="publications.html" class="menu">Publications</a>  
-		| <a href="CV.pdf" class="menu" target="_blank">CV</a> 
+		| <a href="publications.html" class="menu">Publications</a>
+		| <a href="teaching.html" class="menu">Teaching</a>   
 		| <a href="https://github.com/songzLi" class="menu" target="_blank">Software</a>
+		| <a href="CV_Songze_Li.pdf" class="menu" target="_blank">CV</a> 
 		| <a href="bio.html" class="menu">Bio</a> 
 		|
 		<!--| <a href=“songze-Resume-Public.pdf" class="menu" target="_blank">Resume</a> |-->  		
