--- a/publications.html
+++ b/publications.html
@@ -52,22 +52,22 @@ li {
 
 /* unvisited link */
 a:link {
-    color: #CC0000;
+    color: blue;
     text-decoration: none;
 }
 
 a:visited {
-    color: #CC0000;
+    color: blue;
     text-decoration: none;
 }
 
 a:hover {
-   color: #CC0000;
+   color: blue;
 	text-decoration: underline;
 }
 
 a:active {
-  	color: #CC0000;
+  	color: blue;
 	text-decoration: underline;
 }
 </style>
