--- a/teaching.html
+++ b/teaching.html
@@ -52,22 +52,22 @@ li {
 
 /* unvisited link */
 a:link {
-    color: #CC0000;
+    color: blue;
     text-decoration: none;
 }
 
 a:visited {
-    color: #CC0000;
+    color: blue;
     text-decoration: none;
 }
 
 a:hover {
-   color: #CC0000;
+   color: blue;
 	text-decoration: underline;
 }
 
 a:active {
-  	color: #CC0000;
+  	color: blue;
 	text-decoration: underline;
 }
 </style>
@@ -102,6 +102,7 @@ a:active {
 			<h2>HKUST</h2>
 			<ul>
 				<li>
+					<!-- <a href="taught_courses/HKUST/IOTA-5101-Spring-2021.html">IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021</a> -->
 					IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021
 				</li>
 			</ul>
