--- a/teaching.html
+++ b/teaching.html
@@ -102,8 +102,8 @@ a:active {
 			<h2>HKUST</h2>
 			<ul>
 				<li>
-					<!-- <a href="taught_courses/HKUST/IOTA-5101-Spring-2021.html">IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021</a> -->
-					IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021
+					<a href="taught_courses/HKUST/IOTA-5101-Spring-2021.html">IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021</a>
+					<!-- IOTA 5101: Fog/Edge/Cloud Computing for IoT - Spring 2021 -->
 				</li>
 			</ul>
 	
